Web Search apiUrl is now editable

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -29,6 +29,7 @@
   "api_key_placeholder": "Enter the API key to access the LLM APIs",
   "api-key": "API key",
   "api-keys": "API keys",
+  "api_url": "API url",
   "apikey-added": "API key added successfully",
   "apikey-created": "API key created",
   "apikey-deleted": "API key deleted successfully",
@@ -191,6 +192,7 @@
   "important_logicle_is_100%_unaffiliated_with_openai": "Important: Logicle is 100% unaffiliated with OpenAI",
   "informations": "Informations",
   "insert_apikey_placeholder": "Insert an API key...",
+  "insert_apiurl_or_leave_blank_for_default": "Insert API url, or leave blank for default",
   "insert_a_conversation_starter_placeholder": "Insert a conversation starter...",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
   "insert_gcp_credentials_placeholder": "Insert GCP Credentials...",
