--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -29,6 +29,7 @@
   "api_key_placeholder": "Inserisci l' API key per accedere alle API LLM",
   "api-key": "API key",
   "api-keys": "API key",
+  "api_url": "API url",
   "apikey-added": "API key aggiunta con successo",
   "apikey-created": "API key creata",
   "apikey-deleted": "API key eliminata con successo",
@@ -192,6 +193,7 @@
   "important_logicle_is_100%_unaffiliated_with_openai": "Importante: Logicle è al 100% non affiliata con OpenAI",
   "informations": "Informazioni",
   "insert_apikey_placeholder": "Inserisci un API key...",
+  "insert_apiurl_or_leave_blank_for_default": "Inserisci un API url, o lascia vuoto per accettare il default",
   "insert_a_conversation_starter_placeholder": "Inserisci un inizio di conversazione...",
   "insert_a_tag_and_press_enter": "Inserisci un tag e premi invio",
   "insert_gcp_credentials_placeholder": "Inserisci le credenziali GCP...",
