--- a/logicle/locales/it/tools.json
+++ b/logicle/locales/it/tools.json
@@ -2,5 +2,6 @@
   "dall-e": "Generazione immagini",
   "file-manager": "File",
   "openapi": "OpenAPI",
-  "timeofday": "Ora corrente"
+  "timeofday": "Ora corrente",
+  "websearch": "Ricerca web"
 }
