--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -370,6 +370,7 @@
   "token-limit": "Limite Token",
   "tool-successfully-created": "Tool creato con successo",
   "tool-successfully-deleted": "Tool eliminato con successo",
+  "tool_call_result": "Risultato invocazione tool",
   "tools": "Tools",
   "type": "Tipo",
   "unknown-error": "Errore sconosciuto",
