Show tool call result in sidebar (#466)

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -292,6 +292,7 @@
   "remove": "Remove",
   "rename": "Rename",
   "reset-password": "Reset Password",
+  "result": "Result",
   "revoke-api-key-confirm": "Are you sure you want to revoke this API key? This action can not be undone.",
   "revoke-api-key": "Revoke API key",
   "revoke": "Revoke",
@@ -369,6 +370,7 @@
   "token-limit": "Token Limit",
   "tool-successfully-created": "Tool has been successfully created",
   "tool-successfully-deleted": "Tool has been successfully deleted",
+  "tool_call_result": "Tool call result",
   "tools": "Tools",
   "type": "Type",
   "unknown-error": "Unknown Error",
