Visual notification of assistant modifications pending

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -225,6 +225,7 @@
   "metadata-xml": "Metadata XML",
   "monthly-usage": "Monthly Usage",
   "model": "Model",
+  "modified": "Modified",
   "most-active-users": "Most active users",
   "my-assistants": "My assistants",
   "my-profile": "My profile",
