--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -226,6 +226,7 @@
   "metadata-xml": "Metadata XML",
   "monthly-usage": "Utilizzo Mensile",
   "model": "Modello",
+  "modified": "Modificato",
   "most-active-users": "Utenti più attivi",
   "my-assistants": "I miei assistenti",
   "my-profile": "Il mio profilo",
