"Save" button now... saves and publishes

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -46,6 +46,7 @@
   "assistant-duplicated": "Assistente duplicato con successo",
   "assistant-owner-updated": "Proprietario dell'assistente modificato con successo",
   "assistant-successfully-created": "Assistente creato con successo",
+  "assistant-successfully-published": "Assistente pubblicato con successo",
   "assistant-successfully-updated": "Assistente modificato con successo",
   "assistants": "Assistenti",
   "audit-logs": "Registri di Audit",
