--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -46,6 +46,7 @@
   "assistant-duplicated": "Assistant successfully duplicated",
   "assistant-owner-updated": "The assistant owner has been successfully updated",
   "assistant-successfully-created": "Assistant has been successfully created",
+  "assistant-successfully-published": "Assistant has been successfully published",
   "assistant-successfully-updated": "Assistant has been successfully updated",
   "assistants": "Assistants",
   "audit-logs": "Audit Logs",
