--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -157,6 +157,7 @@
   "discovery-url": "URL di Scoperta",
   "do_you_want_to_recover_an_unsaved_version": "Vuoi recuperare una versione non salvata?",
   "dont-have-an-account": "Non hai un account?",
+  "draft_not_saved": "Bozza non salvata",
   "drop_files_here_or_browse_for_file_upload": "Trascina qui file o <0>sfoglia</0> per upload file",
   "duplicate": "Duplica",
   "edit_role": "Modifica ruolo",
@@ -377,6 +378,7 @@
   "tools": "Tools",
   "type": "Tipo",
   "unknown-error": "Errore sconosciuto",
+  "unpublished_edits": "Modifiche non pubblicate",
   "update-account": "Modifica Account",
   "update_links": "Aggiorna link",
   "update-password": "Modifica Password",
