--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -46,6 +46,7 @@
   "assistant-duplicated": "Assistant successfully duplicated",
   "assistant-owner-updated": "The assistant owner has been successfully updated",
   "assistant-successfully-created": "Assistant has been successfully created",
+  "assistant-successfully-published": "Assistant has been successfully published",
   "assistant-successfully-updated": "Assistant has been successfully updated",
   "assistants": "Assistants",
   "audit-logs": "Audit Logs",
@@ -155,6 +156,7 @@
   "discovery-url": "Discovery URL",
   "do_you_want_to_recover_an_unsaved_version": "Do you want to recover an unsaved version?",
   "dont-have-an-account": "Don't have an account?",
+  "draft_not_saved": "Draft not saved",
   "drop_files_here_or_browse_for_file_upload": "Drop files here or <0>browse</0> for file upload",
   "duplicate": "Duplicate",
   "edit_role": "Edit role",
@@ -375,6 +377,7 @@
   "tools": "Tools",
   "type": "Type",
   "unknown-error": "Unknown Error",
+  "unpublished_edits": "Unpublished edits",
   "update-account": "Update Account",
   "update_links": "Update links",
   "update-password": "Update Password",
