--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -46,6 +46,7 @@
   "assistant-duplicated": "Assistente duplicato con successo",
   "assistant-owner-updated": "Proprietario dell'assistente modificato con successo",
   "assistant-successfully-created": "Assistente creato con successo",
+  "assistant-successfully-published": "Assistente pubblicato con successo",
   "assistant-successfully-updated": "Assistente modificato con successo",
   "assistants": "Assistenti",
   "audit-logs": "Registri di Audit",
@@ -156,6 +157,7 @@
   "discovery-url": "URL di Scoperta",
   "do_you_want_to_recover_an_unsaved_version": "Vuoi recuperare una versione non salvata?",
   "dont-have-an-account": "Non hai un account?",
+  "draft_not_saved": "Bozza non salvata",
   "drop_files_here_or_browse_for_file_upload": "Trascina qui file o <0>sfoglia</0> per upload file",
   "duplicate": "Duplica",
   "edit_role": "Modifica ruolo",
@@ -376,6 +378,7 @@
   "tools": "Tools",
   "type": "Tipo",
   "unknown-error": "Errore sconosciuto",
+  "unpublished_edits": "Modifiche non pubblicate",
   "update-account": "Modifica Account",
   "update_links": "Aggiorna link",
   "update-password": "Modifica Password",
