User preference for conversation editing

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -91,6 +91,7 @@
   "continue-with-google": "Continue with Google",
   "continue-with-saml-sso": "Continue with SAML SSO",
   "conversations": "Conversations",
+  "conversation_editing": "Conversation editing",
   "conversation_is_not_currently_shared": "Conversation is not currently shared",
   "conversation_sharing": "Conversation sharing",
   "conversation_starters": "Conversation starters",
