Shorter user setting name

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -91,6 +91,7 @@
   "continue-with-google": "Continua con Google",
   "continue-with-saml-sso": "Continua con SAML SSO",
   "conversations": "Conversazioni",
+  "conversation_editing": "Editing conversazioni",
   "conversation_is_not_currently_shared": "La conversazione non è al momento condivisa",
   "conversation_sharing": "Condivisione conversazione",
   "conversation_starters": "Iniziatori di conversazione",
