Added option to show assistant icons in chatbar

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -330,6 +330,7 @@
   "sharing": "Sharing",
   "sharing_settings": "Sharing settings",
   "show-in-sidebar": "Show in sidebar",
+  "show_icons_in_chatbar": "Show icons in chat bar",
   "sign-in-with-email": "Sign in with Email",
   "sign-in-with-password": "Sign in with Password",
   "sign-in": "Sign in",
