--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -331,6 +331,7 @@
   "sharing": "Condivisione",
   "sharing_settings": "Impostazioni condivisione",
   "show-in-sidebar": "Mostra nella barra laterale",
+  "show_icons_in_chatbar": "Mostra icone nella barra delle chat",
   "sign-in-with-email": "Accedi con Email",
   "sign-in-with-password": "Accedi con Password",
   "sign-in": "Accedi",
