--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -91,6 +91,7 @@
   "continue-with-google": "Continua con Google",
   "continue-with-saml-sso": "Continua con SAML SSO",
   "conversations": "Conversazioni",
+  "conversation_editing": "Editing conversazioni",
   "conversation_is_not_currently_shared": "La conversazione non è al momento condivisa",
   "conversation_sharing": "Condivisione conversazione",
   "conversation_starters": "Iniziatori di conversazione",
@@ -330,6 +331,7 @@
   "sharing": "Condivisione",
   "sharing_settings": "Impostazioni condivisione",
   "show-in-sidebar": "Mostra nella barra laterale",
+  "show_icons_in_chatbar": "Mostra icone nella barra delle chat",
   "sign-in-with-email": "Accedi con Email",
   "sign-in-with-password": "Accedi con Password",
   "sign-in": "Accedi",
