--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -118,7 +118,7 @@
   "create_tool_field_name_label": "Nome",
   "create_tool_field_name_placeholder": "Nome visualizzato di questo tool...",
   "create_tool_field_description_placeholder": "Breve descrizione di questo tool...",
-  "create_tool_field_promptfragment_placeholder": "Instruzioni aggiunte al system prompt...",
+  "create_tool_field_promptfragment_placeholder": "Istruzioni aggiunte al system prompt...",
   "create_tool": "Crea tool",
   "create_user": "Crea utente",
   "create-a-new-account": "Registrati",
