--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -177,6 +177,7 @@
   "events-to-send": "Events to send",
   "everyone_in_the_company": "Everyone in the company",
   "everyone_in_the_company_will_be_able_to_use_this_assistant": "Everyone in the company will be able to use this assistant",
+  "everyone_in_the_company_will_be_able_to_use_this_tool": "Everyone in the company will be able to add this tool to assistants",
   "failed_creating_link": "Failed creating link",
   "failed_sending_message": "Failed sending message",
   "failed_sending_message_not_authorized": "You're not authorized to add messages to this conversation",
@@ -250,6 +251,7 @@
   "older": "Older",
   "only-me": "Only me",
   "only_you_will_have_access_to_this_assistant": "Only you will have access to this assistant",
+  "only_you_will_have_access_to_this_tool": "Only you will be able to add this tool to an assistant",
   "openai_backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
   "or-sign-in-with": "Or Sign In With",
@@ -327,6 +329,7 @@
   "share": "Share",
   "share_with_workspace": "Share with workspace",
   "share_with_one_or_more_workspaces": "The following workspaces will be able to use and modify this assistant",
+  "share_tool_with_one_or_more_workspaces": "The following workspaces will be able to add this tool to assistants",
   "sharing": "Sharing",
   "sharing_settings": "Sharing settings",
   "show-in-sidebar": "Show in sidebar",
