--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -251,7 +251,7 @@
   "older": "Più vecchi",
   "only-me": "Solo io",
   "only_you_will_have_access_to_this_assistant": "Solo tu avrai accesso a questo assistente",
-  "openai_backend": "OpenAI",
+  "only_you_will_have_access_to_this_tool": "Solo tu potrai aggiungere questo tool ad un assistente",
   "openapi_spec": "Specifica OpenAPI",
   "or-sign-in-with": "Oppure Accedi Con",
   "order_by_name": "Ordina per nome",
@@ -326,6 +326,7 @@
   "settings": "Impostazioni",
   "setup-saml-auth": "Compila le informazioni di seguito per configurare l'autenticazione SAML per una maggiore sicurezza",
   "share": "Condividi",
+  "share_tool_with_one_or_more_workspaces": "I seguenti workspace potranno aggiungere questi tool agli assistenti",
   "share_with_workspace": "Condividi con il workspace",
   "share_with_one_or_more_workspaces": "I seguenti workspace potranno usare e modificare questo assistente",
   "sharing": "Condivisione",
