i18n Table download / copy

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -99,7 +99,7 @@
   "copied-to-clipboard": "Copied to clipboard",
   "copy_code": "Copy code",
   "copy-paste-metadata": "Copy and paste Metadata XML here.",
-  "copy-to-clipboard": "Copy",
+  "copy_to_clipboard": "Copy",
   "create_assistant_field_name_description": "The name users will see in the app",
   "create_assistant_field_name_placeholder": "Name your Assistant",
   "create_assistant_field_select_backend_placeholder": "Select a backend",
@@ -157,6 +157,8 @@
   "discovery-url": "Discovery URL",
   "do_you_want_to_recover_an_unsaved_version": "Do you want to recover an unsaved version?",
   "dont-have-an-account": "Don't have an account?",
+  "download_as_excel": "Download as excel file",
+  "download_as_csv": "Download as csv",
   "draft_not_saved": "Draft not saved",
   "drop_files_here_or_browse_for_file_upload": "Drop files here or <0>browse</0> for file upload",
   "duplicate": "Duplicate",
