--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -99,7 +99,7 @@
   "copied-to-clipboard": "Copiato negli appunti",
   "copy_code": "Copia codice",
   "copy-paste-metadata": "Copia e incolla qui il Metadata XML.",
-  "copy-to-clipboard": "Copia",
+  "copy_to_clipboard": "Copia",
   "create_assistant_field_name_description": "Il nome che gli utenti vedranno nell'app",
   "create_assistant_field_name_placeholder": "Dai un nome al tuo Assistente",
   "create_assistant_field_select_backend_placeholder": "Seleziona un backend",
@@ -158,6 +158,8 @@
   "discovery-url": "URL di Scoperta",
   "do_you_want_to_recover_an_unsaved_version": "Vuoi recuperare una versione non salvata?",
   "dont-have-an-account": "Non hai un account?",
+  "download_as_excel": "Scarica in formato excel",
+  "download_as_csv": "Scarica in formato csv",
   "draft_not_saved": "Bozza non salvata",
   "drop_files_here_or_browse_for_file_upload": "Trascina qui file o <0>sfoglia</0> per upload file",
   "duplicate": "Duplica",
