I18n tooltip image download / copy

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -157,6 +157,7 @@
   "discovery-url": "Discovery URL",
   "do_you_want_to_recover_an_unsaved_version": "Do you want to recover an unsaved version?",
   "dont-have-an-account": "Don't have an account?",
+  "download": "Download",
   "download_as_excel": "Download as excel file",
   "download_as_csv": "Download as csv",
   "draft_not_saved": "Draft not saved",
