--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -158,6 +158,7 @@
   "discovery-url": "URL di Scoperta",
   "do_you_want_to_recover_an_unsaved_version": "Vuoi recuperare una versione non salvata?",
   "dont-have-an-account": "Non hai un account?",
+  "download": "Scarica",
   "download_as_excel": "Scarica in formato excel",
   "download_as_csv": "Scarica in formato csv",
   "draft_not_saved": "Bozza non salvata",
