Tooltips on message buttons

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -97,6 +97,7 @@
   "conversation_starters": "Conversation starters",
   "copied!": "Copied!",
   "copied-to-clipboard": "Copied to clipboard",
+  "copy_as_text": "Copy as text",
   "copy_code": "Copy code",
   "copy-paste-metadata": "Copy and paste Metadata XML here.",
   "copy_to_clipboard": "Copy",
@@ -145,6 +146,7 @@
   "delete-member-warning": "Deleting a member will delete all activites related to that member. This action cannot be undone.",
   "delete-sso-connection-confirmation": "Are you sure you want to delete this SSO Connection? This action can not be undone.",
   "delete-sso-connection": "Delete SSO Connection",
+  "delete_message": "Delete message",
   "delete": "Delete",
   "description": "Description",
   "details": "Details",
@@ -163,6 +165,7 @@
   "draft_not_saved": "Draft not saved",
   "drop_files_here_or_browse_for_file_upload": "Drop files here or <0>browse</0> for file upload",
   "duplicate": "Duplicate",
+  "edit_message": "Edit message",
   "edit_role": "Edit role",
   "edit": "Edit",
   "email-login-error": "Something went wrong while sending the email. Please try again later.",
@@ -303,6 +306,7 @@
   "remove": "Remove",
   "rename": "Rename",
   "reset-password": "Reset Password",
+  "resend_this_message": "Resend this message",
   "result": "Result",
   "revoke-api-key-confirm": "Are you sure you want to revoke this API key? This action can not be undone.",
   "revoke-api-key": "Revoke API key",
@@ -385,6 +389,7 @@
   "tool-successfully-deleted": "Tool has been successfully deleted",
   "tool_call_result": "Tool call result",
   "tools": "Tools",
+  "try_send_message_again": "Invia di nuovo",
   "type": "Type",
   "unknown-error": "Unknown Error",
   "unpublished_edits": "Unpublished edits",
