--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -99,6 +99,7 @@
   "copied-to-clipboard": "Copiato negli appunti",
   "copy_code": "Copia codice",
   "copy-paste-metadata": "Copia e incolla qui il Metadata XML.",
+  "copy_as_text": "Copia come testo",
   "copy_to_clipboard": "Copia",
   "create_assistant_field_name_description": "Il nome che gli utenti vedranno nell'app",
   "create_assistant_field_name_placeholder": "Dai un nome al tuo Assistente",
@@ -146,6 +147,7 @@
   "delete-sso-connection-confirmation": "Sei sicuro di voler eliminare questa connessione SSO? Questa azione non può essere annullata.",
   "delete-sso-connection": "Elimina Connessione SSO",
   "delete": "Elimina",
+  "delete_message": "Elimina messaggio",
   "description": "Descrizione",
   "details": "Dettagli",
   "directory-connection-created": "Connessione directory creata con successo.",
@@ -165,6 +167,7 @@
   "drop_files_here_or_browse_for_file_upload": "Trascina qui file o <0>sfoglia</0> per upload file",
   "duplicate": "Duplica",
   "edit_role": "Modifica ruolo",
+  "edit_message": "Modifica messaggio",
   "edit": "Modifica",
   "email-login-error": "Si è verificato un errore durante l'invio dell'email. Riprova più tardi.",
   "email-login-success": "Un link di accesso è stato inviato al tuo indirizzo email. Il link scadrà entro 24 ore.",
@@ -384,6 +387,7 @@
   "tool-successfully-deleted": "Tool eliminato con successo",
   "tool_call_result": "Risultato invocazione tool",
   "tools": "Tools",
+  "try_send_message_again": "Invia di nuovo il messaggio",
   "type": "Tipo",
   "unknown-error": "Errore sconosciuto",
   "unpublished_edits": "Modifiche non pubblicate",
