--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -53,6 +53,7 @@
   "auth-methods": "Authentication methods",
   "auth-token": "Auth Token",
   "automatic": "Automatic",
+  "back": "Back",
   "backend-deleted": "Backend successfully deleted",
   "backend-successfully-created": "Backend has been successfully created",
   "backend-successfully-updated": "Backend has been successfully updated",
@@ -194,7 +195,9 @@
   "gcpvertex_backend": "Gcp Vertex",
   "general": "General",
   "get-started": "Get Started",
+  "goto_chats": "Go to chats",
   "hi": "Hi",
+  "hide_sidebar": "Hide sidebar",
   "hide-in-sidebar": "Hide in sidebar",
   "high": "High",
   "id": "Id",
@@ -248,6 +251,7 @@
   "new-password": "New Password",
   "new-photo": "Select New Photo",
   "new-workspace": "New Workspace",
+  "next_message": "Next message",
   "no_such_user": "No such user",
   "no-active-workspace": "You do not have any active workspace.",
   "no-api-key-description": "API keys allow your app to communicate with app",
@@ -273,6 +277,7 @@
   "perplexity_backend": "Perplexity",
   "preferences": "Preferences",
   "preview": "Preview",
+  "previous_message": "Previous message",
   "previous-week": "Previous 7 Days",
   "pricing": "Pricing",
   "products": "Products",
@@ -318,6 +323,7 @@
   "save-changes": "Save Changes",
   "save": "Save",
   "scim-url": "SCIM URL.",
+  "scroll_to_end_of_conversation": "Scroll to end of conversation",
   "search": "Search",
   "search_placeholder": "Search...",
   "select_assistant_owner": "Select the assistant owner...",
@@ -340,6 +346,7 @@
   "sharing": "Sharing",
   "sharing_settings": "Sharing settings",
   "show-in-sidebar": "Show in sidebar",
+  "show_sidebar": "Show sidebar",
   "show_icons_in_chatbar": "Show icons in chat bar",
   "sign-in-with-email": "Sign in with Email",
   "sign-in-with-password": "Sign in with Password",
