--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -53,6 +53,7 @@
   "auth-methods": "Metodi di autenticazione",
   "auth-token": "Token di Autenticazione",
   "automatic": "Automatico",
+  "back": "Indietro",
   "backend-deleted": "Backend eliminato con successo",
   "backend-successfully-created": "Backend creato con successo",
   "backend-successfully-updated": "Backend modificato con successo",
@@ -194,7 +195,9 @@
   "gcpvertex_backend": "Gcp Vertex",
   "general": "Generale",
   "get-started": "Inizia Ora",
+  "goto_chats": "Vai alle conversazioni",
   "hi": "Ciao",
+  "hide_sidebar": "Nascondi la barra laterale",
   "hide-in-sidebar": "Nascondi nella barra laterale",
   "high": "High",
   "id": "ID",
@@ -248,6 +251,7 @@
   "new-password": "Nuova Password",
   "new-photo": "Seleziona Nuova Foto",
   "new-workspace": "Nuovo Workspace",
+  "next_message": "Messaggio successivo",
   "no_such_user": "Utente non trovato",
   "no-active-workspace": "Non hai alcun workspace attivo.",
   "no-api-key-description": "Le chiavi API consentono alla tua app di comunicare con l'app",
@@ -272,6 +276,7 @@
   "perplexity_backend": "Perplexity",
   "preferences": "Preferenze",
   "preview": "Anteprima",
+  "previous_message": "Messaggio precedente",
   "previous-week": "Ultimi 7 Giorni",
   "pricing": "Prezzi",
   "products": "Prodotti",
@@ -316,6 +321,7 @@
   "save-changes": "Salva Modifiche",
   "save": "Salva",
   "scim-url": "URL SCIM",
+  "scroll_to_end_of_conversation": "Scroll fino alla fine della conversazione",
   "search": "Cerca",
   "search_placeholder": "Cerca...",
   "select_assistant_owner": "Seleziona il proprietario dell'assistente...",
@@ -337,6 +343,7 @@
   "share_with_one_or_more_workspaces": "I seguenti workspace potranno usare e modificare questo assistente",
   "sharing": "Condivisione",
   "sharing_settings": "Impostazioni condivisione",
+  "show_sidebar": "Mostra barra laterale",
   "show-in-sidebar": "Mostra nella barra laterale",
   "show_icons_in_chatbar": "Mostra icone nella barra delle chat",
   "sign-in-with-email": "Accedi con Email",
