--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -53,6 +53,7 @@
   "auth-methods": "Authentication methods",
   "auth-token": "Auth Token",
   "automatic": "Automatic",
+  "back": "Back",
   "backend-deleted": "Backend successfully deleted",
   "backend-successfully-created": "Backend has been successfully created",
   "backend-successfully-updated": "Backend has been successfully updated",
@@ -97,9 +98,10 @@
   "conversation_starters": "Conversation starters",
   "copied!": "Copied!",
   "copied-to-clipboard": "Copied to clipboard",
+  "copy_as_text": "Copy as text",
   "copy_code": "Copy code",
   "copy-paste-metadata": "Copy and paste Metadata XML here.",
-  "copy-to-clipboard": "Copy",
+  "copy_to_clipboard": "Copy",
   "create_assistant_field_name_description": "The name users will see in the app",
   "create_assistant_field_name_placeholder": "Name your Assistant",
   "create_assistant_field_select_backend_placeholder": "Select a backend",
@@ -145,6 +147,7 @@
   "delete-member-warning": "Deleting a member will delete all activites related to that member. This action cannot be undone.",
   "delete-sso-connection-confirmation": "Are you sure you want to delete this SSO Connection? This action can not be undone.",
   "delete-sso-connection": "Delete SSO Connection",
+  "delete_message": "Delete message",
   "delete": "Delete",
   "description": "Description",
   "details": "Details",
@@ -157,9 +160,13 @@
   "discovery-url": "Discovery URL",
   "do_you_want_to_recover_an_unsaved_version": "Do you want to recover an unsaved version?",
   "dont-have-an-account": "Don't have an account?",
+  "download": "Download",
+  "download_as_excel": "Download as excel file",
+  "download_as_csv": "Download as csv",
   "draft_not_saved": "Draft not saved",
   "drop_files_here_or_browse_for_file_upload": "Drop files here or <0>browse</0> for file upload",
   "duplicate": "Duplicate",
+  "edit_message": "Edit message",
   "edit_role": "Edit role",
   "edit": "Edit",
   "email-login-error": "Something went wrong while sending the email. Please try again later.",
@@ -187,7 +194,9 @@
   "gcpvertex_backend": "Gcp Vertex",
   "general": "General",
   "get-started": "Get Started",
+  "goto_chats": "Go to chats",
   "hi": "Hi",
+  "hide_sidebar": "Hide sidebar",
   "hide-in-sidebar": "Hide in sidebar",
   "high": "High",
   "id": "Id",
@@ -241,6 +250,7 @@
   "new-password": "New Password",
   "new-photo": "Select New Photo",
   "new-workspace": "New Workspace",
+  "next_message": "Next message",
   "no_such_user": "No such user",
   "no-active-workspace": "You do not have any active workspace.",
   "no-api-key-description": "API keys allow your app to communicate with app",
@@ -265,6 +275,7 @@
   "perplexity_backend": "Perplexity",
   "preferences": "Preferences",
   "preview": "Preview",
+  "previous_message": "Previous message",
   "previous-week": "Previous 7 Days",
   "pricing": "Pricing",
   "products": "Products",
@@ -298,6 +309,7 @@
   "remove": "Remove",
   "rename": "Rename",
   "reset-password": "Reset Password",
+  "resend_this_message": "Resend this message",
   "result": "Result",
   "revoke-api-key-confirm": "Are you sure you want to revoke this API key? This action can not be undone.",
   "revoke-api-key": "Revoke API key",
@@ -309,6 +321,7 @@
   "save-changes": "Save Changes",
   "save": "Save",
   "scim-url": "SCIM URL.",
+  "scroll_to_end_of_conversation": "Scroll to end of conversation",
   "search": "Search",
   "search_placeholder": "Search...",
   "select_assistant_owner": "Select the assistant owner...",
@@ -330,6 +343,7 @@
   "sharing": "Sharing",
   "sharing_settings": "Sharing settings",
   "show-in-sidebar": "Show in sidebar",
+  "show_sidebar": "Show sidebar",
   "show_icons_in_chatbar": "Show icons in chat bar",
   "sign-in-with-email": "Sign in with Email",
   "sign-in-with-password": "Sign in with Password",
@@ -379,6 +393,7 @@
   "tool-successfully-deleted": "Tool has been successfully deleted",
   "tool_call_result": "Tool call result",
   "tools": "Tools",
+  "try_send_message_again": "Invia di nuovo",
   "type": "Type",
   "unknown-error": "Unknown Error",
   "unpublished_edits": "Unpublished edits",
