--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -53,6 +53,7 @@
   "auth-methods": "Metodi di autenticazione",
   "auth-token": "Token di Autenticazione",
   "automatic": "Automatico",
+  "back": "Indietro",
   "backend-deleted": "Backend eliminato con successo",
   "backend-successfully-created": "Backend creato con successo",
   "backend-successfully-updated": "Backend modificato con successo",
@@ -99,7 +100,8 @@
   "copied-to-clipboard": "Copiato negli appunti",
   "copy_code": "Copia codice",
   "copy-paste-metadata": "Copia e incolla qui il Metadata XML.",
-  "copy-to-clipboard": "Copia",
+  "copy_as_text": "Copia come testo",
+  "copy_to_clipboard": "Copia",
   "create_assistant_field_name_description": "Il nome che gli utenti vedranno nell'app",
   "create_assistant_field_name_placeholder": "Dai un nome al tuo Assistente",
   "create_assistant_field_select_backend_placeholder": "Seleziona un backend",
@@ -146,6 +148,7 @@
   "delete-sso-connection-confirmation": "Sei sicuro di voler eliminare questa connessione SSO? Questa azione non può essere annullata.",
   "delete-sso-connection": "Elimina Connessione SSO",
   "delete": "Elimina",
+  "delete_message": "Elimina messaggio",
   "description": "Descrizione",
   "details": "Dettagli",
   "directory-connection-created": "Connessione directory creata con successo.",
@@ -158,10 +161,14 @@
   "discovery-url": "URL di Scoperta",
   "do_you_want_to_recover_an_unsaved_version": "Vuoi recuperare una versione non salvata?",
   "dont-have-an-account": "Non hai un account?",
+  "download": "Scarica",
+  "download_as_excel": "Scarica in formato excel",
+  "download_as_csv": "Scarica in formato csv",
   "draft_not_saved": "Bozza non salvata",
   "drop_files_here_or_browse_for_file_upload": "Trascina qui file o <0>sfoglia</0> per upload file",
   "duplicate": "Duplica",
   "edit_role": "Modifica ruolo",
+  "edit_message": "Modifica messaggio",
   "edit": "Modifica",
   "email-login-error": "Si è verificato un errore durante l'invio dell'email. Riprova più tardi.",
   "email-login-success": "Un link di accesso è stato inviato al tuo indirizzo email. Il link scadrà entro 24 ore.",
@@ -188,7 +195,9 @@
   "gcpvertex_backend": "Gcp Vertex",
   "general": "Generale",
   "get-started": "Inizia Ora",
+  "goto_chats": "Vai alle conversazioni",
   "hi": "Ciao",
+  "hide_sidebar": "Nascondi la barra laterale",
   "hide-in-sidebar": "Nascondi nella barra laterale",
   "high": "High",
   "id": "ID",
@@ -242,6 +251,7 @@
   "new-password": "Nuova Password",
   "new-photo": "Seleziona Nuova Foto",
   "new-workspace": "Nuovo Workspace",
+  "next_message": "Messaggio successivo",
   "no_such_user": "Utente non trovato",
   "no-active-workspace": "Non hai alcun workspace attivo.",
   "no-api-key-description": "Le chiavi API consentono alla tua app di comunicare con l'app",
@@ -266,6 +276,7 @@
   "perplexity_backend": "Perplexity",
   "preferences": "Preferenze",
   "preview": "Anteprima",
+  "previous_message": "Messaggio precedente",
   "previous-week": "Ultimi 7 Giorni",
   "pricing": "Prezzi",
   "products": "Prodotti",
@@ -310,6 +321,7 @@
   "save-changes": "Salva Modifiche",
   "save": "Salva",
   "scim-url": "URL SCIM",
+  "scroll_to_end_of_conversation": "Scroll fino alla fine della conversazione",
   "search": "Cerca",
   "search_placeholder": "Cerca...",
   "select_assistant_owner": "Seleziona il proprietario dell'assistente...",
@@ -331,6 +343,7 @@
   "share_with_one_or_more_workspaces": "I seguenti workspace potranno usare e modificare questo assistente",
   "sharing": "Condivisione",
   "sharing_settings": "Impostazioni condivisione",
+  "show_sidebar": "Mostra barra laterale",
   "show-in-sidebar": "Mostra nella barra laterale",
   "show_icons_in_chatbar": "Mostra icone nella barra delle chat",
   "sign-in-with-email": "Accedi con Email",
@@ -381,6 +394,7 @@
   "tool-successfully-deleted": "Tool eliminato con successo",
   "tool_call_result": "Risultato invocazione tool",
   "tools": "Tools",
+  "try_send_message_again": "Invia di nuovo il messaggio",
   "type": "Tipo",
   "unknown-error": "Errore sconosciuto",
   "unpublished_edits": "Modifiche non pubblicate",
