Improve UI of language selection

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -215,6 +215,7 @@
   "invite-create-account": "Per continuare, devi creare un nuovo account o accedere a un account esistente.",
   "invocation_of_tool": "Invocazione del tool",
   "knowledge": "Conoscenza",
+  "language": "Lingua",
   "last_upd": "Ultimo\u00A0agg.",
   "legal-disclaimer": "Logicle Chat può commettere errori. Verifica le informazioni importanti.",
   "link_created": "Link creato",
