--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -214,6 +214,7 @@
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
   "invocation_of_tool": "Invocation of tool",
   "knowledge": "Knowledge",
+  "language": "Language",
   "last_upd": "Last\u00A0upd.",
   "legal-disclaimer": "Logicle Chat can make mistakes. Consider checking important information.",
   "link_created": "Link created",
