--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -98,6 +98,7 @@
   "conversation_starters": "Conversation starters",
   "copied!": "Copied!",
   "copied-to-clipboard": "Copied to clipboard",
+  "copy": "Copy",
   "copy_as_text": "Copy as text",
   "copy_code": "Copy code",
   "copy-paste-metadata": "Copy and paste Metadata XML here.",
