--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -98,6 +98,7 @@
   "conversation_starters": "Iniziatori di conversazione",
   "copied!": "Copiato!",
   "copied-to-clipboard": "Copiato negli appunti",
+  "copy": "Copia",
   "copy_code": "Copia codice",
   "copy-paste-metadata": "Copia e incolla qui il Metadata XML.",
   "copy_as_text": "Copia come testo",
