Tool API Key insertion in modal dialog

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -27,7 +27,7 @@
   "any_available": "Any available",
   "api_endpoint_placeholder": "Enter your api endpoint",
   "api_key_placeholder": "Enter the API key to access the LLM APIs",
-  "api-key": "API key",
+  "api_key": "API key",
   "api-keys": "API keys",
   "api_url": "API url",
   "apikey-added": "API key added successfully",
@@ -209,6 +209,7 @@
   "insert_apiurl_or_leave_blank_for_default": "Insert API url, or leave blank for default",
   "insert_a_conversation_starter_placeholder": "Insert a conversation starter...",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
+  "insert_named_credentials_placeholder": "Insert {{name}}...",
   "insert_gcp_credentials_placeholder": "Insert GCP Credentials...",
   "insert_openapi_spec_placeholder": "Insert a YAML OpenAPI spec...",
   "instructions": "Instructions",
@@ -260,6 +261,7 @@
   "no-credentials": "No credentials found.",
   "no_filter": "No filter",
   "none": "None",
+  "ok": "Ok",
   "older": "Older",
   "only-me": "Only me",
   "only_you_will_have_access_to_this_assistant": "Only you will have access to this assistant",
