--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -27,7 +27,7 @@
   "any_available": "Tutti i disponibili",
   "api_endpoint_placeholder": "Inserisci il tuo endpoint API",
   "api_key_placeholder": "Inserisci l' API key per accedere alle API LLM",
-  "api-key": "API key",
+  "api_key": "API key",
   "api-keys": "API key",
   "api_url": "API url",
   "apikey-added": "API key aggiunta con successo",
@@ -210,6 +210,7 @@
   "insert_a_conversation_starter_placeholder": "Inserisci un inizio di conversazione...",
   "insert_a_tag_and_press_enter": "Inserisci un tag e premi invio",
   "insert_gcp_credentials_placeholder": "Inserisci le credenziali GCP...",
+  "insert_named_credentials_placeholder": "Inserisci {{name}}...",
   "insert_openapi_spec_placeholder": "Inserisci una specifica YAML OpenAPI...",
   "instructions": "Istruzioni",
   "invalid-credentials": "Credenziali di accesso non valide",
@@ -260,6 +261,7 @@
   "no-credentials": "Credenziali non trovate.",
   "no_filter": "Non filtrare",
   "none": "Nessuno",
+  "ok": "Ok",
   "older": "Più vecchi",
   "only-me": "Solo io",
   "only_you_will_have_access_to_this_assistant": "Solo tu avrai accesso a questo assistente",
