--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -1,4 +1,5 @@
 {
+  "app_info": "App info",
   "account-info": "Account Details",
   "account-successfully-updated": "Account has been successfully updated",
   "acs-url": "ACS URL",
