--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -1,4 +1,5 @@
 {
+  "app_info": "Informazioni app",
   "account-info": "Dettagli Account",
   "account-successfully-updated": "Account modificato con successo",
   "acs-url": "URL ACS",
