Added user preference to choose system prompt editor

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -13,6 +13,7 @@
   "add-user": "Add user",
   "admin": "Admin",
   "administrator-settings": "Administrator settings",
+  "advanced_system_prompt_editor": "Advanced system prompt editor",
   "all-assistants": "Assistants",
   "all-backends": "Backends",
   "all-products": "All Products",
