--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -11,6 +11,7 @@
   "add-members": "Aggiungi Membri",
   "add-tools": "Aggiungi tool",
   "add-user": "Aggiungi Utente",
+  "advanced_system_prompt_editor": "System prompt editor avanzato",
   "admin": "Amministratore",
   "administrator-settings": "Impostazioni Amministratore",
   "all-assistants": "Assistenti",
