Added advancedMessageEditor option

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -11,7 +11,8 @@
   "add-members": "Aggiungi Membri",
   "add-tools": "Aggiungi tool",
   "add-user": "Aggiungi Utente",
-  "advanced_system_prompt_editor": "System prompt editor avanzato",
+  "advanced_message_editor": "Editor messaggi avanzato",
+  "advanced_system_prompt_editor": "Editor system prompt avanzato",
   "admin": "Amministratore",
   "administrator-settings": "Impostazioni Amministratore",
   "all-assistants": "Assistenti",
