--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -173,6 +173,7 @@
   "duplicate": "Duplica",
   "edit_role": "Modifica ruolo",
   "edit_message": "Modifica messaggio",
+  "edit_and_send_message": "Modifica e invia messaggio",
   "edit": "Modifica",
   "email-login-error": "Si è verificato un errore durante l'invio dell'email. Riprova più tardi.",
   "email-login-success": "Un link di accesso è stato inviato al tuo indirizzo email. Il link scadrà entro 24 ore.",
