Make user messages editable (#561)

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -11,7 +11,8 @@
   "add-members": "Aggiungi Membri",
   "add-tools": "Aggiungi tool",
   "add-user": "Aggiungi Utente",
-  "advanced_system_prompt_editor": "System prompt editor avanzato",
+  "advanced_message_editor": "Editor messaggi avanzato",
+  "advanced_system_prompt_editor": "Editor system prompt avanzato",
   "admin": "Amministratore",
   "administrator-settings": "Impostazioni Amministratore",
   "all-assistants": "Assistenti",
@@ -172,6 +173,7 @@
   "duplicate": "Duplica",
   "edit_role": "Modifica ruolo",
   "edit_message": "Modifica messaggio",
+  "edit_and_send_message": "Modifica e invia messaggio",
   "edit": "Modifica",
   "email-login-error": "Si è verificato un errore durante l'invio dell'email. Riprova più tardi.",
   "email-login-success": "Un link di accesso è stato inviato al tuo indirizzo email. Il link scadrà entro 24 ore.",
