--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -48,6 +48,7 @@
   "assistant-details": "Assistant details",
   "assistant-duplicated": "Assistant successfully duplicated",
   "assistant-owner-updated": "The assistant owner has been successfully updated",
+  "assistant-restored": "Assistant successfully restored",
   "assistant-successfully-created": "Assistant has been successfully created",
   "assistant-successfully-published": "Assistant has been successfully published",
   "assistant-successfully-updated": "Assistant has been successfully updated",
@@ -320,6 +321,7 @@
   "rename": "Rename",
   "reset-password": "Reset Password",
   "resend_this_message": "Resend this message",
+  "restore_this_version": "Restore this version",
   "result": "Result",
   "revoke-api-key-confirm": "Are you sure you want to revoke this API key? This action can not be undone.",
   "revoke-api-key": "Revoke API key",
