--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -48,6 +48,7 @@
   "assistant-details": "Dettagli assistente",
   "assistant-duplicated": "Assistente duplicato con successo",
   "assistant-owner-updated": "Proprietario dell'assistente modificato con successo",
+  "assistant-restored": "Assistente ripristinato con successo",
   "assistant-successfully-created": "Assistente creato con successo",
   "assistant-successfully-published": "Assistente pubblicato con successo",
   "assistant-successfully-updated": "Assistente modificato con successo",
@@ -318,6 +319,7 @@
   "remove": "Rimuovi",
   "rename": "Rinomina",
   "reset-password": "Reimposta Password",
+  "restore_this_version": "Ripristina questa versione",
   "result": "Risultato",
   "revoke-api-key-confirm": "Sei sicuro di voler revocare questa API key? Questa azione non può essere annullata.",
   "revoke-api-key": "Revoca API key",
