Replaced "cancel" with option menu with version chronology

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -272,6 +272,7 @@
   "only_you_will_have_access_to_this_assistant": "Solo tu avrai accesso a questo assistente",
   "only_you_will_have_access_to_this_tool": "Solo tu potrai aggiungere questo tool ad un assistente",
   "openapi_spec": "Specifica OpenAPI",
+  "options": "Opzioni",
   "or-sign-in-with": "Oppure Accedi Con",
   "order_by_name": "Ordina per nome",
   "order_by_last_usage": "Ordina per ultimo utilizzo",
@@ -415,6 +416,7 @@
   "user": "Utente",
   "user-deleted": "Utente eliminato con successo",
   "users": "Utenti",
+  "version_chronology": "Cronologia Versione",
   "welcome_to_logicle": "Benvenuto in logicle",
   "workspace-connections": "Connessioni SSO del Workspace",
   "workspace-created": "Workspace creato con successo.",
