--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -273,6 +273,7 @@
   "only_you_will_have_access_to_this_tool": "Only you will be able to add this tool to an assistant",
   "openai_backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
+  "options": "Options",
   "or-sign-in-with": "Or Sign In With",
   "order_by_name": "Order by name",
   "order_by_last_usage": "Order by last usage",
@@ -417,6 +418,7 @@
   "user": "User",
   "user-deleted": "User successfully deleted",
   "users": "Users",
+  "version_chronology": "Version chronology",
   "welcome_to_logicle": "Welcome to Logicle",
   "workspace-connections": "Workspace SSO Connections",
   "workspace-created": "Workspace created successfully.",
