Reload  version list after changes / success toast

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -48,7 +48,7 @@
   "assistant-details": "Dettagli assistente",
   "assistant-duplicated": "Assistente duplicato con successo",
   "assistant-owner-updated": "Proprietario dell'assistente modificato con successo",
-  "assistant-restored": "Assistente ripristinato con successo",
+  "assistant_restored": "Assistente ripristinato con successo",
   "assistant-successfully-created": "Assistente creato con successo",
   "assistant-successfully-published": "Assistente pubblicato con successo",
   "assistant-successfully-updated": "Assistente modificato con successo",
