--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -48,7 +48,7 @@
   "assistant-details": "Assistant details",
   "assistant-duplicated": "Assistant successfully duplicated",
   "assistant-owner-updated": "The assistant owner has been successfully updated",
-  "assistant-restored": "Assistant successfully restored",
+  "assistant_restored": "Assistant successfully restored",
   "assistant-successfully-created": "Assistant has been successfully created",
   "assistant-successfully-published": "Assistant has been successfully published",
   "assistant-successfully-updated": "Assistant has been successfully updated",
